[package]
name = "entity_bench"
version = "0.1.0"
authors = ["OvermindDL1 <overminddl1@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
criterion = "0.3.3"
crossbeam = "0.7.3"
hashbrown = { version = "0.8.0", default-features = false, features = ["ahash", "inline-more"] }

[[bench]]
name = "entity_bench"
harness = false
